generated/checker-for-evaluation/generated/test-Memory-Leak-27834971f616c5e154423c578fa95e0444444ce1/build_logs/0/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBranchCondition(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:53:80: error: ‘const class clang::Expr’ has no member named ‘getReferencedDeclOfCXXMethod’; did you mean ‘getReferencedDeclOfCallee’?
   53 |   const IdentifierInfo *CalleeId = FoundCall->getCallee()->IgnoreParenCasts()->getReferencedDeclOfCXXMethod()
      |                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                                getReferencedDeclOfCallee
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:85: error: ‘const class clang::Expr’ has no member named ‘getDecl’
   55 |                                       : FoundCall->getCallee()->IgnoreParenCasts()->getDecl()->getIdentifier();
      |                                                                                     ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:57:45: error: ‘const class clang::CallExpr’ has no member named ‘getCalleeIdentifier’
   57 |   if (const IdentifierInfo *Id = FoundCall->getCalleeIdentifier()) {
      |                                             ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:79:48: error: ‘const class clang::CallExpr’ has no member named ‘getCalleeIdentifier’
   79 |   if (const IdentifierInfo *FreeId = FreeCall->getCalleeIdentifier()) {
      |                                                ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:53:25: warning: unused variable ‘CalleeId’ [-Wunused-variable]
   53 |   const IdentifierInfo *CalleeId = FoundCall->getCallee()->IgnoreParenCasts()->getReferencedDeclOfCXXMethod()
      |                         ^~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
